# devops-sandbox

./: .gitattributes  .gitignore  .talismanrc  CODEOWNERS  README.md  lol.json
sdlc-trace/: Dockerfile  README.md  build.sh  pyproject.toml
sdlc-trace/data/evidence_vault_storage/approvals/: SNOW1200.json  SNOW1201.json  SNOW1202.json  SNOW1203.json  SNOW1204.json  SNOWPROD1000.json  SNOWPROD1001.json  SNOWPROD1002.json  SNOWPROD1003.json  SNOWPROD1004.json  SNOWPROD1005.json  SNOWPROD2000.json  SNOWPROD2001.json  SNOWPROD2006.json  SNOWQA1000.json  SNOWQA1001.json  SNOWQA1002.json  SNOWQA1003.json  SNOWQA1004.json  SNOWQA1005.json  SNOWQA2000.json  SNOWQA2001.json  SNOWQA2002.json  SNOWQA2006.json
sdlc-trace/data/evidence_vault_storage/evidence/: EV-100-CR.metadata.json  EV-100.metadata.json  EV-101-CR.metadata.json  EV-101.metadata.json  EV-102-CR.metadata.json  EV-102.metadata.json  EV-103-CR.metadata.json  EV-103.metadata.json  EV-104-CR.metadata.json  EV-104.metadata.json  EV-3000.metadata.json  EV-3001.metadata.json  EV-3002.metadata.json  EV-3003.metadata.json  EV-3004.metadata.json  EV-3006.metadata.json  EV-3007.metadata.json  EV-3008.metadata.json  EV-3009.metadata.json  EV-3010.metadata.json  EV-3011.metadata.json  EV-3012.metadata.json  EV-3014.metadata.json  EV-3015.metadata.json  EV-3016.metadata.json  (+55 more)
sdlc-trace/docs/: PLAT-2000.mmd  README_enhanced_with_schema.md  d3.html  evidence_vault_domain_model.mmd  mermaid.json  traceability_PLAT_2000_to_2006.md  traceability_detailed_PLAT_2000_to_2006.md
sdlc-trace/src/sdlc_trace/: auth.py  main.py
(+708 files in other folders)
