[project]
name = "sdlc-trace"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier Matias-Cabrera",email = "javier@javiermatias.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "boto3 (>=1.37.34,<2.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)"
]

[tool.poetry]
packages = [{include = "sdlc_trace", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
